# ROEGATE

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/: START_anthropic_api.md  START_claude_code.md  START_ollama.md  START_openai.md  claude_code_pentest_agent.py  corpsec_labs_roe.yaml  demo.py  demo_enforcement.py  demo_local_judge.py  launch_pentest.sh  local_corp_roe.yaml  localhost_webapp_roe.yaml  multi_vendor_pentest.py  roe_gate_config.yaml
src/: __init__.py  __main__.py
src/agents/: __init__.py  anthropic_agent.py  base.py  config.py  openai_agent.py
src/audit/: __init__.py  logger.py
src/core/: __init__.py  action_intent.py  judge.py  providers.py  rule_engine.py  target_extraction.py
src/crypto/: __init__.py  ed25519_signer.py  signer.py
src/gate/: __init__.py  gate.py
src/hooks/: bash_gate_hook.py
src/licensing/: __init__.py  keys.py  tiers.py  validator.py
src/roe_spec/: schema.yaml
src/service/: __init__.py  dashboard.py  gate_api.py  gate_client.py  mcp_server.py  roe_creator.py
src/tools/: __init__.py  executor.py  proxy.py  sandbox.py
tests/: conftest.py  helpers.py  test_action_intent.py  test_agent_framework.py  test_audit.py  test_constraints.py  test_ed25519.py  test_executor.py  test_gate.py  test_hitl.py  test_judge.py  test_providers_new.py  test_proxy.py  test_roe_creator.py  test_rule_engine.py  test_signer.py  test_target_extraction.py
